# llm-rust

./: .gitignore  AGENTS.md  Cargo.toml  HANDOFF.md  PLAN-llm-upstream-feature-parity-roadmap.md  PLAN-rust-native-plugin-api-and-converter.md  README.md  mprocs.yaml  nextsteps.md  tools.md
.github/workflows/: ci.yml  secret-scan.yml
CONTEXT/: PLAN-rust-llm-core-implementation-2025-10-25.md  PLAN-rust-llm-rewrite-2025-10-24.md
crates/llm-cli/: Cargo.toml
crates/llm-cli/src/: command_registry.rs  main.rs
crates/llm-cli/tests/: cli.rs  compatibility.rs  golden.rs
crates/llm-core/: Cargo.toml
crates/llm-core/src/: aliases.rs  attachments.rs  fragments.rs  lib.rs  logs.rs  migrations.rs  model_options.rs  registry.rs  templates.rs
crates/llm-core/src/providers/: anthropic.rs  mod.rs  openai.rs
crates/llm-embeddings/: Cargo.toml
crates/llm-embeddings/src/: collection.rs  lib.rs  migrations.rs  provider.rs  registry.rs
crates/llm-plugin-api/: Cargo.toml
crates/llm-plugin-api/src/: lib.rs
crates/llm-plugin-host/: Cargo.toml
crates/llm-plugin-host/src/: lib.rs
crates/llm-plugin-markov/: Cargo.toml  llm-plugin.toml
crates/llm-plugin-markov/src/: lib.rs  markov.rs
crates/llm-plugin-markov/tests/: golden.rs
docs/: cli-parity-matrix.md  plugin-manifest-schema.md  provider-abstraction.md  rust-quickstart.md  rust-rewrite-plan.md
docs/adr/: ADR-001-plugin-runtime-architecture.md  ADR-002-id-migration-strategy.md  ADR-003-unified-plugin-registry.md  ADR-004-converter-ir-and-unsupported-pattern-policy.md
scripts/: parity-diff.sh
tests/fixtures/: README.md  aliases.json  default_model.txt  generate_fixtures.sql  keys_sample.json  model_options.json
tests/fixtures/golden/: logs_list_entries.json
