[workspace]
resolver = "2"
members = [
    "crates/llm-core",
    "crates/llm-cli",
    "crates/llm-plugin-api",
    "crates/llm-plugin-host",
    "crates/llm-plugin-markov",
    "crates/llm-embeddings",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
authors = ["LLM Contributors"]
repository = "https://github.com/simonw/llm"
homepage = "https://llm.datasette.io/"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
directories = "5.0"
tempfile = "3.12"
rpassword = "7.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
sha2 = "0.10"
infer = "0.15"
ulid = "1.1"
