[package]
name = "llm-plugin-host"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
toml = "0.8"
llm-core = { path = "../llm-core" }
llm-embeddings = { path = "../llm-embeddings" }
llm-plugin-api = { path = "../llm-plugin-api" }

[features]
default = []
plugin-markov = ["dep:llm-plugin-markov"]

[dependencies.llm-plugin-markov]
path = "../llm-plugin-markov"
optional = true
